--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "partysocket": "1.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router": "7.6.3"
+    "react-router": "7.6.3",
+    "react-router-dom": "7.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
