--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cf-typegen": "wrangler types ./src/server/worker-configuration.d.ts",
     "check": "tsc --project src/client && tsc --project src/server && wrangler deploy --dry-run",
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev"
+    "dev": "wrangler dev",
+    "preinstall": "npm install react-router-dom"
   }
 }
